<resources>
    <string name="app_name">Wlan-Detektor</string>
    <string name="title_home">Home Wifi-detector</string>
    <string name="title_echtzeitmessung_de">Real time measurement</string>
    <string name="title_messungen_de">Measurements</string>
    <string name="button_netzwerkwahl_de">Network choice</string>
    <string name="title_visualisierung_de">Visualization</string>
    <string name="txt_netzwerknamen_de">SSID</string>
    <string name="txt_macadresse_de">MAC Address</string>
    <string name="txt_Frequenz_de">Band</string>
    <string name="txt_Hersteller_de">Manufacturer</string>
    <string name="txt_Sicherheittyp_de">Security type:</string>
    <string name="txt_max_upload_de">Up/Download:</string>
    <string name="txt_pegel_de">Up/Download</string>
    <string name="txt_decibel_de">- dB</string>
    <string name="txt_signalstaerke_titel_de">signal strength</string>
    <string name="txt_tonhoehe_de">pitch</string>
    <string name="btn_start_de">Start</string>
    <string name="txt_messung_neu_namen_de">Name of measurement</string>
    <string name="btn_netzwerk_anmelden_de">network login</string>
    <string name="txt_raeumlichkeit_de">Type of space</string>
    <string name="btn_speichern_de">Save</string>
    <string name="txt_netzTitel_de">Not yet logged into the Wlan</string>
    <string name="txt_netzwerk_de">Network</string>
    <string name="txt_titel_messung_hinzufuegen_de">Add measurement</string>
    <string name="txt_ausgewaehlteMessung_de">Selected measurement</string>
    <string name="txt_Gebaeude_de">Building</string>
    <string name="txt_stockwerk_de">Floor</string>
    <string name="txt_raumname_de">Room name</string>
    <string name="txt_zusatzinformationen_de">Additional information</string>
    <string name="txt_helper_max_zeichen_de">Maximum 80 characters</string>
    <string name="txt_abbrechen">Cancel</string>
    <string name="txt_datum_de">Date</string>
    <string name="txt_zeit_de">Time</string>
    <string name="txt_gemessener_pegel_de">Measured level</string>
    <string name="txt_titel_hauptmenue_de">Wifi-detector</string>
    <string name="txt_titel_home_echzeitmessung">Real time measurement</string>
    <string name="txt_titel_home_messpunktverwaltung">Measuring point administration</string>
    <string name="txt_titel_home_visualisierung">Visualization</string>
    <string name="txt_beschreibung_messpunkt_verwaltung">In the measuring point management you have the possibility to enter a measurement and any measuring points to it.</string>
    <string name="txt_beschreibung_echzeitmessung">"In the real time measurement you have the possibility to determine the levels as well as further information in real time for the already registered WLAN. "</string>
    <string name="txt_beschreibung_visualisierung">In the visualization you can display previously acquired measurements transparently.</string>
    <string name="txt_stoppen">STOP</string>
    <string name="txt_starten">START</string>
    <string name="txt_wohnung">Flat</string>
    <string name="txt_haus">House</string>
    <string name="txt_gewerbe">Commerce</string>
    <string name="txt_3.UG">3rd basement</string>
    <string name="txt_2.UG">2nd basement</string>
    <string name="txt_1.UG">1st basement</string>
    <string name="txt_erdgeschoss">Ground Floor</string>
    <string name="txt_1.OG">1st Floor</string>
    <string name="txt_2.OG">2nd Floor</string>
    <string name="txt_3.OG">3rd Floor</string>
    <string name="txt_4.OG">4st Floor</string>
    <string name="txt_6.OG">6st Floor</string>
    <string name="txt_5.OG">5st Floor</string>
    <string name="txt_7.OG">7st Floor</string>
    <string name="txt_8.OG">8st Floor</string>
    <string name="txt_9.OG">9st Floor</string>
    <string name="txt_10.OG">10st Floor</string>
    <string name="txt_11.OG">11th Floor</string>
    <string name="txt_12.OG">12th Floor</string>
    <string name="txt_13.OG">13th Floor</string>
    <string name="txt_14.OG">14th Floor</string>
    <string name="txt_15.OG">15th Floor</string>
    <string name="txt_16.OG">16th Floor</string>
    <string name="txt_17.OG">17th Floor</string>
    <string name="txt_18.OG">18th Floor</string>
    <string name="txt_19.OG">19th Floor</string>
    <string name="txt_20.OG">20th Floor</string>
    <string name="txt_messung_hinzufuegen">Add measurement</string>
    <string name="txt_messung_bearbeiten">Edit measurement</string>
    <string name="txt_bitte_auswaehlen">Please choose</string>
    <string name="txt_messung_loeschen">Delete measurement</string>
    <string name="txt_ausgewaehlteMessung">Selected measurement</string>
    <string name="txt_bild_einfügen">Bild einfügen</string>
    <string name="wlan_netzwerk">Wlan Netzwerk:</string>
    <string name="txt_messpunkt_hinzufuegen">Messpunkt hinzufügen</string>
    <string name="txt_hint_max_20_Zeichen">maximal 20 Zeichen</string>
    <string name="txt_stockwerk_wählen">wähle das Stockwerk des Messpunktes</string>
    <string name="txt_namen_bereits_vergeben">Namen bereits vergeben</string>
    <string name="title_messungen_verwalten">Messungen verwalten</string>
    <string name="txt_beschreibung_der_echzeitmessung">Beschreibung der Echzeitmessung</string>
    <string name="txt_wlan_anmeldung">1. Wlan Anmeldung</string>
    <string name="txt_ueber_uns">About us</string>
    <string name="txt_loeschen">Löschen</string>
    <string name="txt_aktueller_name">Aktueller name:</string>
    <string name="txt_neuer_messungsname">neuer Messungsname</string>
    <string name="messungsname_aendern">Messungsname ändern</string>
    <string name="datenschutzerklaerung">Datenschutzerklärung</string>
    <string name="disclaimer">Haftungsausschluss</string>
    <string name="txt_datenschutzerklaerung">Privacy policy</string>
    <string name="txt_beschreibung_bruno">Students of the ABB Technical School Post-graduate studies Software Engineer</string>
    <string name="large_text_haftungsausschluss">
"Last updated: January 29, 2022\n\n"
"<b>Interpretation and Definitions</b>"
"<b>Interpretation</b>"
"The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.\n"
"<b>Definitions</b>"
"For the purposes of this Disclaimer:\n"
"<li><b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Disclaimer) refers to WLAN Detektor PRO.\n</li>"
"<li><b>Service</b> refers to the Application.\n</li>"
"<li><b>You</b> means the individual accessing the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.\n</li>"
"<li><b>Application</b> means the software program provided by the Company downloaded by You on any electronic device named WLAN Detektor PRO.\n</li>"
"<b>Disclaimer</b>"
"The information contained on the Service is for general information purposes only.\n"
"The Company assumes no responsibility for errors or omissions in the contents of the Service.\n"
"In no event shall the Company be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. The Company reserves the right to make additions, deletions, or modifications to the contents on the Service at any time without prior notice. This Disclaimer has been created with the help of the https://www.termsfeed.com/blog/sample-disclaimer-template/.\n"
"The Company does not warrant that the Service is free of viruses or other harmful components.\n"
"<b>External Links Disclaimer</b>"
"The Service may contain links to external websites that are not provided or maintained by or in any way affiliated with the Company.\n"
"Please note that the Company does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.\n"
"<b>Errors and Omissions Disclaimer</b>"
"The information given by the Service is for general guidance on matters of interest only. Even if the Company takes every precaution to insure that the content of the Service is both current and accurate, errors can occur. Plus, given the changing nature of laws, rules and regulations, there may be delays, omissions or inaccuracies in the information contained on the Service.\n"
"The Company is not responsible for any errors or omissions, or for the results obtained from the use of this information.\n"
"<b>Fair Use Disclaimer</b>"
"The Company may use copyrighted material which has not always been specifically authorized by the copyright owner. The Company is making such material available for criticism, comment, news reporting, teaching, scholarship, or research."
"The Company believes this constitutes a "fair use" of any such copyrighted material as provided for in section 107 of the United States Copyright law."
"If You wish to use copyrighted material from the Service for your own purposes that go beyond fair use, You must obtain permission from the copyright owner.\n"
"<b>Views Expressed Disclaimer</b>"
"The Service may contain views and opinions which are those of the authors and do not necessarily reflect the official policy or position of any other author, agency, organization, employer or company, including the Company."
"Comments published by users are their sole responsibility and the users will take full responsibility, liability and blame for any libel or litigation that results from something written in or as a direct result of something written in a comment. The Company is not liable for any comment published by users and reserves the right to delete any comment for any reason whatsoever.\n"
"<b>No Responsibility Disclaimer</b>"
"The information on the Service is provided with the understanding that the Company is not herein engaged in rendering legal, accounting, tax, or other professional advice and services. As such, it should not be used as a substitute for consultation with professional accounting, tax, legal or other competent advisers."
"In no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever arising out of or in connection with your access or use or inability to access or use the Service.\n"
"<b>Use at Your Own Risk" Disclaimer</b>"
"All information in the Service is provided "as is", with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability and fitness for a particular purpose.\n"
"The Company will not be liable to You or anyone else for any decision made or action taken in reliance on the information given by the Service or for any consequential, special or similar damages, even if advised of the possibility of such damages.\n"
"<b>Contact Us</b>"
"If you have any questions about this Disclaimer, You can contact Us:\n"
"<li>By email: wlandetektor@it-wissen.ch</li>"
    </string>
</resources>