<?xml version="1.0" encoding="utf-8"?>

<ScrollView  android:id="@+id/scroll_screen" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MessungVerwalten.MesspunktErfassungsFragment">


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </View>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="16dp"
            android:background="@drawable/box_detail_info_background">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_gewaehlteMessung"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:maxWidth="200dp"
                    android:text="@string/txt_ausgewaehlteMessung_de"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_messung_namen"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="32dp"
                    android:maxWidth="200dp"
                    android:text="Name der Messung"
                    android:textColor="@color/white" />


            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_raumname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/txt_raumname_de"
            android:maxWidth="100dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_invalid_input"
            app:helperText="@string/txt_hint_max_20_Zeichen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:startIconDrawable="@drawable/ic_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_raumname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dd_stockwerk_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:maxWidth="100dp"
            app:helperText="@string/txt_stockwerk_wählen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_raumname_layout"
            app:startIconDrawable="@drawable/ic_stockwerke">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/txt_stockwerk_de"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_gebaeude_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/txt_Gebaeude_de"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:helperText="@string/txt_hint_max_20_Zeichen"
            android:maxWidth="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dd_stockwerk_layout"
            app:startIconDrawable="@drawable/ic_home_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_gebaeude_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_zusatzinformation_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/txt_zusatzinformationen_de"
            android:maxWidth="100dp"
            app:counterEnabled="true"
            app:counterMaxLength="80"
            app:errorEnabled="true"
            app:helperText="@string/txt_helper_max_zeichen_de"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_gebaeude_layout"
            app:startIconDrawable="@drawable/ic_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_zusatzinformation_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="80"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pg_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="-30"
            android:maxWidth="100dp"
            android:min="-90"
            android:progress="-90"
            android:progressDrawable="@drawable/progressbar_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_zusatzinformation_layout" />

        <TextView
            android:id="@+id/tv_signalstaerke_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_margin"
            android:text="@string/txt_signalstaerke_titel_de"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/pg_progressBar"
            app:layout_constraintTop_toBottomOf="@+id/pg_progressBar" />

        <TextView
            android:id="@+id/tv_signalstaerke_wert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/text_margin"
            android:text="- dB"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_signalstaerke_titel"
            app:layout_constraintStart_toEndOf="@+id/tv_signalstaerke_titel" />

        <Button
            android:id="@+id/btn_start_messpunkt_messung"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:text="@string/btn_start_de"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_signalstaerke_wert"
            app:layout_constraintEnd_toEndOf="@+id/pg_progressBar" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="400dp">

        </FrameLayout>

        <Button
            android:id="@+id/btn_bild_hinzufuegen"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/txt_bild_einfügen"
            android:textColor="?android:textColorPrimary"
            android:hint="Bild hinzugefügt"
            app:icon="@drawable/ic__add_a_photo"
            app:layout_constraintStart_toStartOf="@+id/tv_signalstaerke_titel"
            app:layout_constraintTop_toBottomOf="@+id/tv_signalstaerke_titel"
            tools:ignore="SpeakableTextPresentCheck">


        </Button>

        <TextView
            android:id="@+id/tv_bild_eingefuegt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:text="Bild eingefügt"
            android:visibility="invisible"
            android:textColor="#69F0AE"
            app:layout_constraintStart_toStartOf="@+id/btn_bild_hinzufuegen"
            app:layout_constraintTop_toBottomOf="@+id/btn_bild_hinzufuegen" />

        <ImageView
            android:id="@+id/iv_bild_eingefuegt_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tv_bild_eingefuegt"
            app:layout_constraintStart_toEndOf="@id/tv_bild_eingefuegt"
            app:layout_constraintTop_toTopOf="@+id/tv_bild_eingefuegt"
            app:srcCompat="@drawable/ic_baseline_check_circle_outline_24"
            app:tint="#69F0AE" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bild_eingefuegt">
            app:layout_constraintEnd_toEndOf="@+id/btn_start_messpunkt_messung"
            app:layout_constraintStart_toEndOf="@+id/abbrechen"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_messpunkt_messung"

            <Button
                android:id="@+id/messpunkt_loeschen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/txt_loeschen" />

            <Button
                android:id="@+id/messpunkt_speichern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_speichern_de" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
